<resources>
    <string name="app_name">Book Listing</string>
    <string name="hint_search">Search</string>
    <string name="textView_search_results">Search Results</string>
    <string name="textView_title">Title</string>
    <string name="textView_author_name">Author Name</string>
    <string name="textView_publisher">Publisher</string>
    <string name="textView_publishedDate">Published Date</string>
    <string name="textView_pageCount">Page Count</string>
    <string name="textView_description">Description</string>
    <string name="textView_info">Information</string>
    <string name="message_no_network">No Network Connection</string>
    <string name="message_no_data">No Book Available</string>
    <string name="button_book_preview">Book Preview</string>
</resources>